# threads

./: .gitignore  CMakeLists.txt
src/include/evo/threads/: exports.h  threads.h  time.h
src/src/evo/threads/: posix.c  time.c  win32.c
